# infrastructure-learning

./: Dockerfile  Makefile  README.md  main.tf  pyproject.toml
.github/workflows/: CI_CD.yml  build-docker-image.yml  python-app.yml
src/: app.py  database.json  jobs.py
tests/: test_base_entry_point.py  test_job_retrieval.py
