# If package installation get stuck, use poetry cache clear pypi --all
[tool.poetry]
name = "infrastructure-learning"
version = "0.1.0"
description = ""
authors = ["mattiasu96"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
