# If package installation get stuck, use poetry cache clear pypi --all
[tool.poetry]
name = "infrastructure-learning"
version = "0.1.0"
description = ""
authors = ["mattiasu96"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pylint = "^2.17.3"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
